[gd_scene load_steps=78 format=3 uid="uid://cu7sq7qsegybv"]

[ext_resource type="Script" uid="uid://capaaf1i1hca8" path="res://player_character.gd" id="1_5up26"]
[ext_resource type="Texture2D" uid="uid://daydr280x8q3j" path="res://media/animations/player/Idle-Anim.png" id="2_5up26"]
[ext_resource type="Texture2D" uid="uid://csuaks6nwe5fc" path="res://media/animations/player/Walk-Anim.png" id="3_4akcp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uuvki"]
atlas = ExtResource("2_5up26")
region = Rect2(0, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04jrr"]
atlas = ExtResource("2_5up26")
region = Rect2(24, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yf86"]
atlas = ExtResource("2_5up26")
region = Rect2(0, 128, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bl0p"]
atlas = ExtResource("2_5up26")
region = Rect2(24, 128, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_he2na"]
atlas = ExtResource("2_5up26")
region = Rect2(0, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3c78"]
atlas = ExtResource("2_5up26")
region = Rect2(24, 96, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh3ko"]
atlas = ExtResource("2_5up26")
region = Rect2(0, 160, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgme8"]
atlas = ExtResource("2_5up26")
region = Rect2(24, 160, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4akcp"]
atlas = ExtResource("2_5up26")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hvvw"]
atlas = ExtResource("2_5up26")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5up26"]
atlas = ExtResource("2_5up26")
region = Rect2(0, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qc1w"]
atlas = ExtResource("2_5up26")
region = Rect2(24, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1g7m"]
atlas = ExtResource("2_5up26")
region = Rect2(0, 224, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi6eu"]
atlas = ExtResource("2_5up26")
region = Rect2(24, 224, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha3ud"]
atlas = ExtResource("2_5up26")
region = Rect2(0, 192, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi50n"]
atlas = ExtResource("2_5up26")
region = Rect2(24, 192, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_od4g1"]
atlas = ExtResource("3_4akcp")
region = Rect2(0, 96, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_43oxn"]
atlas = ExtResource("3_4akcp")
region = Rect2(40, 96, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1oirj"]
atlas = ExtResource("3_4akcp")
region = Rect2(80, 96, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgamr"]
atlas = ExtResource("3_4akcp")
region = Rect2(120, 96, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oir7"]
atlas = ExtResource("3_4akcp")
region = Rect2(160, 96, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vigrq"]
atlas = ExtResource("3_4akcp")
region = Rect2(200, 96, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fiymq"]
atlas = ExtResource("3_4akcp")
region = Rect2(240, 96, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjlx2"]
atlas = ExtResource("3_4akcp")
region = Rect2(0, 192, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6ts6"]
atlas = ExtResource("3_4akcp")
region = Rect2(40, 192, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ddoo"]
atlas = ExtResource("3_4akcp")
region = Rect2(80, 192, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j02f"]
atlas = ExtResource("3_4akcp")
region = Rect2(120, 192, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg15n"]
atlas = ExtResource("3_4akcp")
region = Rect2(160, 192, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dsce"]
atlas = ExtResource("3_4akcp")
region = Rect2(200, 192, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m42q"]
atlas = ExtResource("3_4akcp")
region = Rect2(240, 192, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b86v"]
atlas = ExtResource("3_4akcp")
region = Rect2(0, 144, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkwx3"]
atlas = ExtResource("3_4akcp")
region = Rect2(40, 144, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j4lq"]
atlas = ExtResource("3_4akcp")
region = Rect2(80, 144, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bcw5"]
atlas = ExtResource("3_4akcp")
region = Rect2(120, 144, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_44oc2"]
atlas = ExtResource("3_4akcp")
region = Rect2(160, 144, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vrud"]
atlas = ExtResource("3_4akcp")
region = Rect2(200, 144, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu7ln"]
atlas = ExtResource("3_4akcp")
region = Rect2(240, 144, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjjar"]
atlas = ExtResource("3_4akcp")
region = Rect2(0, 240, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_trtsc"]
atlas = ExtResource("3_4akcp")
region = Rect2(40, 240, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr4d3"]
atlas = ExtResource("3_4akcp")
region = Rect2(80, 240, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5ncw"]
atlas = ExtResource("3_4akcp")
region = Rect2(120, 240, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmcrx"]
atlas = ExtResource("3_4akcp")
region = Rect2(160, 240, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsdwn"]
atlas = ExtResource("3_4akcp")
region = Rect2(200, 240, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir063"]
atlas = ExtResource("3_4akcp")
region = Rect2(240, 240, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_shfbp"]
atlas = ExtResource("3_4akcp")
region = Rect2(0, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qi5y"]
atlas = ExtResource("3_4akcp")
region = Rect2(40, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcb6y"]
atlas = ExtResource("3_4akcp")
region = Rect2(80, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiwnc"]
atlas = ExtResource("3_4akcp")
region = Rect2(120, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8dtl"]
atlas = ExtResource("3_4akcp")
region = Rect2(160, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_03yx5"]
atlas = ExtResource("3_4akcp")
region = Rect2(200, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjagv"]
atlas = ExtResource("3_4akcp")
region = Rect2(240, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf8sq"]
atlas = ExtResource("3_4akcp")
region = Rect2(0, 48, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq5ck"]
atlas = ExtResource("3_4akcp")
region = Rect2(40, 48, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_me054"]
atlas = ExtResource("3_4akcp")
region = Rect2(80, 48, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ellnp"]
atlas = ExtResource("3_4akcp")
region = Rect2(120, 48, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cew2o"]
atlas = ExtResource("3_4akcp")
region = Rect2(160, 48, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e30f3"]
atlas = ExtResource("3_4akcp")
region = Rect2(200, 48, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3ppr"]
atlas = ExtResource("3_4akcp")
region = Rect2(240, 48, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vqsh"]
atlas = ExtResource("3_4akcp")
region = Rect2(0, 336, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2051"]
atlas = ExtResource("3_4akcp")
region = Rect2(40, 336, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jarjw"]
atlas = ExtResource("3_4akcp")
region = Rect2(80, 336, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvvs8"]
atlas = ExtResource("3_4akcp")
region = Rect2(120, 336, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_liejj"]
atlas = ExtResource("3_4akcp")
region = Rect2(160, 336, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa83m"]
atlas = ExtResource("3_4akcp")
region = Rect2(200, 336, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fctes"]
atlas = ExtResource("3_4akcp")
region = Rect2(240, 336, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t1ur"]
atlas = ExtResource("3_4akcp")
region = Rect2(0, 288, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqjmj"]
atlas = ExtResource("3_4akcp")
region = Rect2(40, 288, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycqjm"]
atlas = ExtResource("3_4akcp")
region = Rect2(80, 288, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xthw"]
atlas = ExtResource("3_4akcp")
region = Rect2(120, 288, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7wvy"]
atlas = ExtResource("3_4akcp")
region = Rect2(160, 288, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mfai"]
atlas = ExtResource("3_4akcp")
region = Rect2(200, 288, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_477jy"]
atlas = ExtResource("3_4akcp")
region = Rect2(240, 288, 40, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_6qc1w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuvki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04jrr")
}],
"loop": true,
"name": &"idle_east",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yf86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bl0p")
}],
"loop": true,
"name": &"idle_north",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_he2na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3c78")
}],
"loop": true,
"name": &"idle_northeast",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh3ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgme8")
}],
"loop": true,
"name": &"idle_northwest",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4akcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hvvw")
}],
"loop": true,
"name": &"idle_south",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5up26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qc1w")
}],
"loop": true,
"name": &"idle_southeast",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1g7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi6eu")
}],
"loop": true,
"name": &"idle_southwest",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha3ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi50n")
}],
"loop": true,
"name": &"idle_west",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_od4g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43oxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1oirj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgamr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oir7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vigrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fiymq")
}],
"loop": true,
"name": &"move_east",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjlx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6ts6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ddoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j02f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg15n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dsce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m42q")
}],
"loop": true,
"name": &"move_north",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b86v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkwx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j4lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bcw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44oc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vrud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu7ln")
}],
"loop": true,
"name": &"move_northeast",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjjar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trtsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr4d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5ncw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmcrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsdwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir063")
}],
"loop": true,
"name": &"move_northwest",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shfbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qi5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcb6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiwnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8dtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03yx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjagv")
}],
"loop": true,
"name": &"move_south",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf8sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq5ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me054")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ellnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cew2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e30f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3ppr")
}],
"loop": true,
"name": &"move_southeast",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vqsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2051")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jarjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvvs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liejj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa83m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fctes")
}],
"loop": true,
"name": &"move_southwest",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t1ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqjmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycqjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xthw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7wvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mfai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_477jy")
}],
"loop": true,
"name": &"move_west",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5up26"]
size = Vector2(24, 32)

[node name="PlayerCharacter" type="CharacterBody2D"]
script = ExtResource("1_5up26")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6qc1w")
animation = &"move_northwest"
frame_progress = 0.55336

[node name="StateLabel" type="Label" parent="Sprite"]
offset_left = -20.0
offset_right = 27.0
offset_bottom = 23.0
text = "STATE"

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5up26")

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="WeaponAnchor" type="Marker2D" parent="WeaponPivot"]
position = Vector2(100, 0)
